fix(cors): allow vercel origins in backend and auto-normalize frontend api base url to /api